--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <section class="presentation">
             
 
-            <img src="/htmlsvg/profil.svg" alt="photo de profil" class="img-profil adaptive-img--contain">
+            <img src="/html/svg/profil.svg" alt="photo de profil" class="img-profil adaptive-img--contain">
 
             <div class="light">
                 <h2>Laurent 'Teko' Millard</h2>
@@ -145,7 +145,7 @@
         <div class="container-icons">
             <div><img src="/html/svg/icon1.svg" alt="logo php"></div>
             <div><img src="/html/svg/icon2.svg" alt="logo react"></div>
-            <div><img src="/html/icon3.svg" alt="logo javascript"></div>
+            <div><img src="/html/svg/icon3.svg" alt="logo javascript"></div>
             <div><img src="/html/svg/icon4.svg" alt="logo html"></div>
             <div><img src="/html/svg/icon5.svg" alt="logo css"></div>
             <div><img src="/html/svg/icon6.svg" alt="logo mysql"></div>
