--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!--Importation des icones-->
 <script src="https://kit.fontawesome.com/73d4778f4c.js" crossorigin="anonymous"></script>
 
-<script src="/js/mainindex.js"  async></script>
+<script src="js/mainindex.js"  async></script>
 
 </head>
 
@@ -51,9 +51,9 @@
 
             <nav>
                 <ul class="nav-bar" id="nav-bar">
-                    <li><a href="/html/course.html" alt="Mes cours">Mes cours</a></li>
+                    <li><a href="html/course.html" alt="Mes cours">Mes cours</a></li>
 
-                    <li><a href="/html/project.html" alt="Mes projets">Projets</a></li>
+                    <li><a href="html/project.html" alt="Mes projets">Projets</a></li>
 
                     <li><a href="index.html" alt="Accueil">Accueil</a></li>
 
@@ -89,7 +89,7 @@
         <section class="presentation">
             
 
-            <img src="/html/svg/profil.svg" alt="photo de profil" class="img-profil adaptive-img--contain">
+            <img src="html/svg/profil.svg" alt="photo de profil" class="img-profil adaptive-img--contain">
 
             <div class="light">
                 <h2>Laurent 'Teko' Millard</h2>
@@ -135,7 +135,7 @@
 
 <!--Pour voir et ou télécharger mon cv en PDF-->
         <div class="container-curriculum">
-            <a href="/mycv/myCV.pdf" alt="Visionné mon CV">Mon CV</a>
+            <a href="mycv/myCV.pdf" alt="Visionné mon CV">Mon CV</a>
         </div>
 <!--Encart-->
         <div class="incarnate">
@@ -143,14 +143,14 @@
         </div>
 <!--Mes notions en flex wrap pour le responsive-->
         <div class="container-icons">
-            <div><img src="/html/svg/icon1.svg" alt="logo php"></div>
-            <div><img src="/html/svg/icon2.svg" alt="logo react"></div>
-            <div><img src="/html/svg/icon3.svg" alt="logo javascript"></div>
-            <div><img src="/html/svg/icon4.svg" alt="logo html"></div>
-            <div><img src="/html/svg/icon5.svg" alt="logo css"></div>
-            <div><img src="/html/svg/icon6.svg" alt="logo mysql"></div>
-            <div><img src="/html/svg/icon7.svg" alt="logo figma"></div>
-            <div><img src="/html/svg/icon8.svg" alt="logo SASS"></div>
+            <div><img src="html/svg/icon1.svg" alt="logo php"></div>
+            <div><img src="html/svg/icon2.svg" alt="logo react"></div>
+            <div><img src="html/svg/icon3.svg" alt="logo javascript"></div>
+            <div><img src="html/svg/icon4.svg" alt="logo html"></div>
+            <div><img src="html/svg/icon5.svg" alt="logo css"></div>
+            <div><img src="html/svg/icon6.svg" alt="logo mysql"></div>
+            <div><img src="html/svg/icon7.svg" alt="logo figma"></div>
+            <div><img src="html/svg/icon8.svg" alt="logo SASS"></div>
         </div>
 
         <!--Animation de mes compétences-->
