--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
   content="unavailable_after: 22-Feb-2022 10:00:00 GMT"
 />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/reseter.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/reseter.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!--Importation de la font Gotu-->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Gotu&family=Josefin+Sans:ital,wght@0,100;0,300;0,600;0,700;1,200;1,300;1,500;1,600;1,700&display=swap');
     </style>
     <!--Importation des icones-->
 <script src="https://kit.fontawesome.com/73d4778f4c.js" crossorigin="anonymous"></script>
-
-<script src="js/mainindex.js"  async></script>
+<!--darkmod-->
+<script src="/js/mainindex.js"  async></script>
 
 </head>
 
@@ -51,9 +51,9 @@
 
             <nav>
                 <ul class="nav-bar" id="nav-bar">
-                    <li><a href="html/course.html" alt="Mes cours">Mes cours</a></li>
+                    <li><a href="/html/course.html" alt="Mes cours">Mes cours</a></li>
 
-                    <li><a href="html/project.html" alt="Mes projets">Projets</a></li>
+                    <li><a href="/html/project.html" alt="Mes projets">Projets</a></li>
 
                     <li><a href="index.html" alt="Accueil">Accueil</a></li>
 
@@ -143,14 +143,14 @@
         </div>
 <!--Mes notions en flex wrap pour le responsive-->
         <div class="container-icons">
-            <div><img src="html/svg/icon1.svg" alt="logo php"></div>
-            <div><img src="html/svg/icon2.svg" alt="logo react"></div>
-            <div><img src="html/svg/icon3.svg" alt="logo javascript"></div>
-            <div><img src="html/svg/icon4.svg" alt="logo html"></div>
-            <div><img src="html/svg/icon5.svg" alt="logo css"></div>
-            <div><img src="html/svg/icon6.svg" alt="logo mysql"></div>
-            <div><img src="html/svg/icon7.svg" alt="logo figma"></div>
-            <div><img src="html/svg/icon8.svg" alt="logo SASS"></div>
+            <div><img src="/html/svg/icon1.svg" alt="logo php"></div>
+            <div><img src="/html/svg/icon2.svg" alt="logo react"></div>
+            <div><img src="/html/svg/icon3.svg" alt="logo javascript"></div>
+            <div><img src="/html/svg/icon4.svg" alt="logo html"></div>
+            <div><img src="/html/svg/icon5.svg" alt="logo css"></div>
+            <div><img src="/html/svg/icon6.svg" alt="logo mysql"></div>
+            <div><img src="/html/svg/icon7.svg" alt="logo figma"></div>
+            <div><img src="/html/svg/icon8.svg" alt="logo SASS"></div>
         </div>
 
         <!--Animation de mes compétences-->
@@ -204,6 +204,5 @@
 
 
 </body> 
-<!--Darkmode-->
 
 </html>
