--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   content="unavailable_after: 22-Feb-2022 10:00:00 GMT"
 />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="moncv/css/common.css">
-    <link rel="stylesheet" href="moncv/css/reseter.css">
-    <link rel="stylesheet" href="moncv/css/style.css">
+    <link rel="stylesheet" href="/moncv/css/common.css">
+    <link rel="stylesheet" href="/moncv/css/reseter.css">
+    <link rel="stylesheet" href="/moncv/css/style.css">
     <!--Importation de la font Gotu-->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Gotu&family=Josefin+Sans:ital,wght@0,100;0,300;0,600;0,700;1,200;1,300;1,500;1,600;1,700&display=swap');
@@ -30,7 +30,7 @@
     <!--Importation des icones-->
 <script src="https://kit.fontawesome.com/73d4778f4c.js" crossorigin="anonymous"></script>
 <!--darkmod-->
-<script src="/js/mainindex.js"  async></script>
+<script src="/moncv/js/mainindex.js"  async></script>
 
 </head>
 
@@ -89,7 +89,7 @@
         <section class="presentation">
             
 
-            <img src="html/svg/profil.svg" alt="photo de profil" class="img-profil adaptive-img--contain">
+            <img src="/moncv/html/svg/profil.svg" alt="photo de profil" class="img-profil adaptive-img--contain">
 
             <div class="light">
                 <h2>Laurent 'Teko' Millard</h2>
