--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 
             <nav>
                 <ul class="nav-bar" id="nav-bar">
-                    <li><a href="/html/course.html" alt="Mes cours">Mes cours</a></li>
+                    <li><a href="/moncv/html/course.html" alt="Mes cours">Mes cours</a></li>
 
-                    <li><a href="/html/project.html" alt="Mes projets">Projets</a></li>
+                    <li><a href="/moncv/html/project.html" alt="Mes projets">Projets</a></li>
 
-                    <li><a href="index.html" alt="Accueil">Accueil</a></li>
+                    <li><a href="/moncv/index.html" alt="Accueil">Accueil</a></li>
 
                     
                 </ul>
