--- a/html/project.html
+++ b/html/project.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mes Projets</title>
 
-    <link rel="stylesheet" href="../css/styleproject.css" />
+    <link rel="stylesheet" href="/moncv/css/styleproject.css" />
 
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Gotu&family=Josefin+Sans:ital,wght@0,100;0,300;0,600;0,700;1,200;1,300;1,500;1,600;1,700&display=swap");
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="../js/mainproject.js" async></script>
+    <script src="/moncv/js/mainproject.js" async></script>
   </head>
   <body>
     <header class="header">
@@ -36,7 +36,7 @@
 
             <li><a href="project.html" alt="Mes projets">Projets</a></li>
 
-            <li><a href="/index.html" alt="Accueil">Accueil</a></li>
+            <li><a href="/moncv/index.html" alt="Accueil">Accueil</a></li>
           </ul>
         </nav>
       </div>
