--- a/html/project.html
+++ b/html/project.html
@@ -36,7 +36,7 @@
 
             <li><a href="project.html" alt="Mes projets">Projets</a></li>
 
-            <li><a href="/moncv/../index.html" alt="Accueil">Accueil</a></li>
+            <li><a href="/moncv/index.html" alt="Accueil">Accueil</a></li>
           </ul>
         </nav>
       </div>
