--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                     <li><a href="/moncv/html/project.html" alt="Mes projets">Projets</a></li>
 
-                    <li><a href="/moncv/index.html" alt="Accueil">Accueil</a></li>
+                    <li><a href="https://teko33110.github.io/moncv/index.html" alt="Accueil">Accueil</a></li>
 
                     
                 </ul>
