--- a/html/course.html
+++ b/html/course.html
@@ -38,7 +38,7 @@
 
                     <li><a href="project.html" alt="Mes projets">Projets</a></li>
 
-                    <li><a href="/index.html" alt="Accueil">Accueil</a></li>
+                    <li><a href="https://teko33110.github.io/moncv/index.html" alt="Accueil">Accueil</a></li>
             </ul>
           </nav>
         </div>
