--- a/html/course.html
+++ b/html/course.html
@@ -49,7 +49,7 @@
       <section>
         <div class="container-link"><p>Les exercices réalisés</p>
 
-        <div class="card"><a href="/moncv/html/exercie/chrono">Chronomêtre</a></div>
+        <div class="card"><a href="/moncv/html/exercie/chrono/chrono.html">Chronomêtre</a></div>
         <div class="card">
           <a href="/moncv/html/exercie/canva/index.html">Initiation a canva</a>
         </div>
