--- a/html/project.html
+++ b/html/project.html
@@ -149,10 +149,7 @@
 
       <div>
         <p>
-          La musique est une passion, certes, je n'ai pas à vocation d'être
-          reconnu pour celle-ci mais avec le temps j'aimerais la partagé et avec
-          un meilleur travail à fournir. De ce fait, travailler pour pouvoir
-          exercer ma passion.
+          La musique est une passion, certes, je n'ai pas à vocation d'être reconnu pour celle-ci, mais avec le temps, j'aimerais la partager et avec un meilleur travail à fournir. De ce fait, travailler pour pouvoir exercer ma passion.
         </p>
       </div>
     </main>
