--- a/html/course.html
+++ b/html/course.html
@@ -51,7 +51,7 @@
 
         <div class="card"><a href="/moncv/html/exercie/chrono/chrono.html">Chronomètre</a></div>
         <div class="card">
-          <a href="/moncv/html/exercie/canva/index.html">Initiation a canva</a>
+          <a href="/moncv/html/exercie/canva/index.html">Initiation à canva</a>
         </div>
         <div class="card">
           <a href="/moncv/html/exercie/collapse/index.html">Faire un collapse</a>
@@ -82,7 +82,7 @@
 
 			<div class="footer-right">
                 <p>Mes réseaux</p>
-                <a href="https://www.youtube.com/channel/UCvfXOWSIKZoictLuyAjCiMA" alt="ma chaine youtube"><i class="fa fa-youtube"></i></a>
+                <a href="https://www.youtube.com/channel/UCvfXOWSIKZoictLuyAjCiMA" alt="chaine youtube"><i class="fa fa-youtube"></i></a>
                 <a href="https://twitter.com/haratsume" alt="mon twitter"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/firmin-madeira-321b91193/" alt="Mon profil linkedin"><i class="fa fa-linkedin"></i></a>
                         <a href="https://www.twitch.tv/teko0" alt="ma chaine twitch"><i class="fa fa-twitch"></i></a>
