--- a/html/project.html
+++ b/html/project.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="/moncv/js/mainproject.js" async></script>
+    <script src="/moncv/js/mainproject.js"></script>
   </head>
   <body>
     <header class="header">
