--- a/html/project.html
+++ b/html/project.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="/moncv/js/mainproject.js"></script>
+    <script src="/moncv/js/mainproject.js" async></script>
   </head>
   <body>
     <header class="header">
@@ -45,7 +45,7 @@
     <main>
       <div class="container">
         <div class="title__carousel">
-          <h2>Contenue de ma chaine Youtube</h2>
+          <h2>Contenu de ma chaine Youtube</h2>
         </div>
         <div id="carousel1">
           <div class="item">
@@ -101,8 +101,7 @@
             <div class="item__body">
               <div class="item_title">Yasko-Yasko</div>
               <div class="item__description">
-                Titre éponyme, ce qui reste à contempler après le crash du
-                vaisseau.
+                Titre éponyme, ce qui reste à contempler après le crash...
               </div>
             </div>
           </div>
@@ -121,7 +120,7 @@
             <div class="item__body">
               <div class="item_title">Yasko-Force et Honneur</div>
               <div class="item__description">
-                Un de mes premiers sons, pourvu que l'âme agisse !
+                Un de mes premiers sons, pourvu que l'âme agisse.S
               </div>
             </div>
           </div>
@@ -149,7 +148,8 @@
 
       <div>
         <p>
-          La musique est une passion, certes, je n'ai pas à vocation d'être reconnu pour celle-ci, mais avec le temps, j'aimerais la partager et avec un meilleur travail à fournir. De ce fait, travailler pour pouvoir exercer ma passion.
+          La musique est un de mes hobbies, je n'ai pas à vocation d'être reconnu pour celle-ci.
+          Celà permet de me canaliser et de me recentrer sur moi même et de réaliser un partage.
         </p>
       </div>
     </main>
