correction ortographique 1ere

--- a/html/project.html
+++ b/html/project.html
@@ -34,7 +34,7 @@
           <ul class="nav-bar" id="nav-bar">
             <li><a href="course.html" alt="Mes cours">Mes cours</a></li>
 
-            <li><a href="project.html" alt="Mes projets">Projets</a></li>
+            <li><a href="project.html" alt="Mes projets">Projet</a></li>
 
             <li><a href="https://teko33110.github.io/moncv/index.html" alt="Accueil">Accueil</a></li>
           </ul>
