--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <ul class="nav-bar" id="nav-bar">
                     <li><a href="/moncv/html/course.html" alt="Mes cours">Mes cours</a></li>
 
-                    <li><a href="/moncv/html/project.html" alt="Mes projets">Projets</a></li>
+                    <li><a href="/moncv/html/project.html" alt="Mes projets">Projet</a></li>
 
                     <li><a href="https://teko33110.github.io/moncv/index.html" alt="Accueil">Accueil</a></li>
 
@@ -97,29 +97,29 @@
 
             <div class="light">
                 <h2>Laurent 'Teko' Millard</h2>
-                <p class="paragraphe">J’ai créé ce portfolio en parallèle de mon projet pour validé ma formation, et
-                    présenter quelque chose durant ma recherche de stage. </p>
+                <p class="paragraphe">Ce portfolio, fut créer pour ma recherche de stage qui aura lieu
+                    du 26 Juin au 27 Juillet 2022.</p>
 
                 <p class="paragraphe">Vous y trouverez donc,
-                    les exercices réalisés au cours de cette dernière, ainsi que mes projets persos et mon CV.</p>
+                    des exercices réalisés au cours de cette formation, ainsi que mes hobbies et mon CV.</p>
 
                 <p class="paragraphe"> Je suis un petit passionné de musique, j’ai quelques sons à mon actif.
-                    De plus, je m’adonne de temps en temps quand celui-ci est disponible pour streamer.
+                    De plus, je m’adonne au streaming de temps en temps quand j'en ai à perdre.
                 </p>
                 <p class="paragraphe"> Je me suis inscrit dans cette formation, pour me reconvertir professionnellement.
 
-                    Car je ne trouvais pas de sens aux tâches qu’on me demander.
+                    Car je ne trouvais pas de sens aux tâches qu’on me demandé.
 
-                    Je l’aient trouvées de plus en plus abrutissantes et une seule chose dans la bouche des gens
-                    l’argent...
+                    Je l’aient trouvées de plus en plus abrutissantes et sortant d'un milieu commerçant j'avais de plus en plus de mal avec les clients.
+                    
                 </p>
 
 
                 <p class="paragraphe">Je suis altruiste et j’aime découvrir de nouvelles choses, curieux et soucieux
                     d’évoluer
-                    intérieurement.
+                    intérieurement et professionnellement.
 
-                    J’aime la lecture qui prête cette orientation. J’ai appris à gérer mon stress avec mon travail de
+                    J’aime la lecture qui prête cette orientation et aussi le fantastique. J’ai appris à gérer mon stress avec mon travail de
                     nuit dans le quartier
                     de Saint-Michel à Bordeaux. </p>
 
@@ -143,7 +143,7 @@
         </div>
 <!--Encart-->
         <div class="incarnate">
-            <p>Les notions, les outils vues et utilisés lors de mes cours.</p>
+            <p>Les notions, les outils vues et utilisés lors des cours.</p>
         </div>
 <!--Mes notions en flex wrap pour le responsive-->
         <div class="container-icons">
@@ -182,7 +182,7 @@
                     <p>A l'écoute</p>
                 </div>
                 <div class="card">
-                    <p>Assidu</p>
+                    <p>Assidue</p>
                 </div>
             </div>
         </div>
