--- a/html/project.html
+++ b/html/project.html
@@ -120,7 +120,7 @@
             <div class="item__body">
               <div class="item_title">Yasko-Force et Honneur</div>
               <div class="item__description">
-                Un de mes premiers sons, pourvu que l'âme agisse.S
+                Un de mes premiers sons, pourvu que l'âme agisse.
               </div>
             </div>
           </div>
